# FuuGBemu

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini
include/: Application.h  Apu.hpp  CPU.h  Cartridge.h  CartridgeViewer.h  Cpu.hpp  Debugger.h  Defines.h  GUI.h  Gameboy.h  Gameboy.hpp  Main.hpp  Memory.h  Memory.hpp  MemoryViewer.h  PPU.h  Ppu.hpp  SideNav.hpp  VramViewer.h
include/opengl/: Shader.hpp  Vao.hpp  Vbo.hpp
src/: Application.cpp  Apu.cpp  CPU.cpp  Cartridge.cpp  CartridgeViewer.cpp  Cpu.cpp  Debugger.cpp  GUI.cpp  Gameboy.cpp  Main.cpp  Memory.cpp  MemoryViewer.cpp  PPU.cpp  Ppu.cpp  SideNav.cpp  VramViewer.cpp
src/opengl/: Shader.cpp  Vao.cpp  Vbo.cpp
src/opengl/shaders/: Fragment.shader  Vertex.shader
